--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>cod19-cleaner</title>
+<meta property="og:image"
+      content="https://eddornelas.github.io/construct-demo/screen.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover">
 
 	<link rel="manifest" href="appmanifest.json">
